# python-advanced-course

./: .gitignore  README.md  requirements.txt
hw_1/: 1.1.py  1.2.py  1.3.py
hw_1/artifacts/: test-1.1.txt  test-1.2.txt  test-1.3.txt
hw_2/: 2.1.py  2.2.py  latex_generators.py  pyproject.toml
hw_2/artifacts/: 2.1.txt  2.2.tex
hw_3/: 3.1.py  3.2.py  3.3.py  matrix.py  matrix_mixin.py
hw_3/artifacts/3.2/: matrix*.txt
hw_3/artifacts/3.3/: cd.txt  cd_fake.txt  hash.txt
hw_4/: 4.1.py  4.2.py  helpers.py
hw_4/artifacts/: 4.1.txt  4.2.txt
