# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latextopdftransformeradvancedpythoncourseitmo"
version = "1.0.0"
description = "Test test test"
authors = [{ name = "svezhest", email = "a.s.kryukow@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "feedparser >= 5.2.0",
    "html2text",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/svezhest/python-advanced-course"
